--- a/_manifest.json
+++ b/_manifest.json
@@ -1,20 +1,19 @@
 {
-  "manifest_version": 1,
+  "manifest_version": 3,
   "name": "戳一戳插件 (Poke_Plugin)",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "适用于MaiBot 0.8.x or later 版本的戳一戳插件",
   "author": {
     "name": "Neorestim",
-    "url": "https://github.com/Neorestim"
+    "url": "https://github.com/MaiM-with-u"
   },
   "license": "GPL-v3.0-or-later",
   
   "host_application": {
-    "min_version": "0.8.0",
-    "max_version": "later"
+    "min_version": "0.8.0"
   },
-  "homepage_url": "https://github.com/Neorestim/poke_plugin",
-  "repository_url": "https://github.com/Neorestim/poke_plugin",
+  "homepage_url": "https://github.com/MaiM-with-u/maibot",
+  "repository_url": "https://github.com/MaiM-with-u/maibot",
   "keywords": ["poke"],
   "categories": ["chat"],
   
