--- a/_manifest.json
+++ b/_manifest.json
@@ -12,8 +12,8 @@
   "host_application": {
     "min_version": "0.8.0"
   },
-  "homepage_url": "https://github.com/MaiM-with-u/maibot",
-  "repository_url": "https://github.com/MaiM-with-u/maibot",
+  "homepage_url": "https://github.com/Neorestim/poke_plugin/",
+  "repository_url": "https://github.com/Neorestim/poke_plugin/",
   "keywords": ["poke"],
   "categories": ["chat"],
   
