--- a/_manifest.json
+++ b/_manifest.json
@@ -5,7 +5,7 @@
   "description": "适用于MaiBot 0.8.x or later 版本的戳一戳插件",
   "author": {
     "name": "Neorestim",
-    "url": "https://github.com/MaiM-with-u"
+    "url": "https://github.com/Neorestim"
   },
   "license": "GPL-v3.0-or-later",
   
